--- a/homepage.html
+++ b/homepage.html
@@ -7,32 +7,40 @@
   <title>Smiling School - Homepage</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="pt-3 pb-1">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand mx-auto d-flex flex-column align-items-center" href="#">
-          <img src="images/logo.svg" height="35px" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon">o</span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto text-uppercase">
-            <li class="nav-item"><a class="nav-link text-white" href="#">Courses</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#">Pricing</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#">Login</a></li>
-          </ul>
-        </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand mx-auto d-flex flex-column align-items-center" href="#">
+              <div class="d-lg-none d-flex flex-column align-items-center">
+                  <img src="images/smilelight.png" height="30px" alt="">
+                  <img src="images/smileschooltext.png" height="15px" alt="">
+              </div>
+              <div class="d-none d-lg-flex align-items-center">
+                  <img src="images/smilelight.png" height="30px" alt="" class="mr-4">
+                  <img src="images/smileschooltext.png" height="15px" alt="">
+              </div>
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto text-uppercase">
+                  <li class="nav-item"><a class="nav-link text-white" href="courses.html">Courses</a></li>
+                  <li class="nav-item"><a class="nav-link text-white" href="pricing.html">Pricing</a></li>
+                  <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Login</a></li>
+              </ul>
+          </div>
       </div>
-    </nav>
-
+  </nav>
+  
+  
     <div class="container mt-5">
       <h1 class="display-3">Get schooled</h1>
       <ul class="nav justify-content-center text-uppercase">
@@ -79,41 +87,41 @@
   </header>
 
   <section id="carousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="row flex-wrap justify-content-center mb-5">
-          <div class="col col-sm-4 col-md-2 mt-5 d-flex justify-content-center">
-            <img class="img rounded-circle" src="images/testimonial.png" height="140">
-          </div>
-          <div class="col-11 col-md-6 col-lg-8 item-content mt-5 text-white">
-            <h5>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</h5>
-            <p class="font-weight-bold mb-0">Person Name</p>
-            <p class="font-italic mt-0">Weather Presenter</p>
-          </div>
+    <div class="carousel-inner mx-auto" style="max-width: 1100px; margin: 0 auto;">
+        <div class="carousel-item active">
+            <div class="row flex-wrap justify-content-center">
+                <div class="col col-sm-4 col-md-2 mt-5 d-flex justify-content-center">
+                    <img class="img rounded-circle" src="images/testimonial.png" height="140">
+                </div>
+                <div class="col-11 col-md-6 col-lg-8 item-content mt-5 text-white" style="max-width: 700px;">
+                    <h5>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</h5>
+                    <p class="font-weight-bold mb-0">Person Name</p>
+                    <p class="font-italic mt-0">Weather Presenter</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <div class="row flex-wrap justify-content-center mb-5">
-          <div class="col col-sm-4 col-md-2 mt-5 d-flex justify-content-center">
-            <img class="img rounded-circle" src="images/testimonial.png" height="140">
-          </div>
-          <div class="col-11 col-md-6 col-lg-8 item-content mt-5 text-white">
-            <h5>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</h5>
-            <p class="font-weight-bold mb-0">Person Name</p>
-            <p class="font-italic mt-0">Weather Presenter</p>
-          </div>
+        <div class="carousel-item">
+            <div class="row flex-wrap justify-content-center mb-5">
+                <div class="col col-sm-4 col-md-2 mt-5 d-flex justify-content-center">
+                    <img class="img rounded-circle" src="images/testimonial.png" height="140">
+                </div>
+                <div class="col-11 col-md-6 col-lg-8 item-content mt-5 text-white" style="max-width: 700px;">
+                    <h5>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</h5>
+                    <p class="font-weight-bold mb-0">Person Name</p>
+                    <p class="font-italic mt-0">Weather Presenter</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-        <img class="prev-arrow-icon" src="images/leftarrowlight.png" aria-hidden="true">
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-        <img class="next-arrow-icon" src="images/rightarrowlight.png" aria-hidden="true">
-        <span class="sr-only">Next</span>
-      </a>
+        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+            <img class="prev-arrow-icon" src="images/leftarrowlight.png" height="45px" aria-hidden="true">
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+            <img class="next-arrow-icon" src="images/rightarrowlight.png" height="45px" aria-hidden="true">
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-  </section>
+</section>
 
   <section class="container-fluid p-0">
     <div class="p-5 text-center">
@@ -125,7 +133,7 @@
           <div class="card-deck border-0 d-flex justify-content-center">
             <div class="card border-0 hidden-sm-down">
               <img src="images/tutorial3.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Diagonal Smile</h5>
@@ -149,7 +157,7 @@
             </div>
             <div class="card border-0 d-none d-md-flex">
               <img src="images/tutorial4.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Sad Smile</h5>
@@ -173,7 +181,7 @@
             </div>
             <div class="card border-0 d-none d-md-flex">
               <img src="images/tutorial3.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Natural Smile</h5>
@@ -197,7 +205,7 @@
             </div>
             <div class="card border-0 d-none d-md-flex">
               <img src="images/tutorial1.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Happy Smile</h5>
@@ -282,7 +290,7 @@
           <div class="card-deck border-0 d-flex justify-content-center">
             <div class="card border-0 hidden-sm-down">
               <img src="images/latestvideos.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Inverted Smile</h5>
@@ -306,7 +314,7 @@
             </div>
             <div class="card border-0 d-none d-md-flex">
               <img src="images/tutorial2.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Sad Smile</h5>
@@ -330,7 +338,7 @@
             </div>
             <div class="card border-0 d-none d-md-flex">
               <img src="images/tutorial3.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Natural Smile</h5>
@@ -354,7 +362,7 @@
             </div>
             <div class="card border-0 d-none d-md-flex">
               <img src="images/tutorial4.png" class="card-img-top d-block">
-              <img src="images/playbutton.png" class="position-absolute" width="60px">
+              <img src="images/playbutton.png" class="position-absolute" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -220%);" width="60px">
               <div class="card-body mx-0 px-0">
                 <div>
                   <h5 class="font-weight-bold">Happy Smile</h5>
@@ -414,5 +422,30 @@
       <p class="copyright text-center my-3 text-white-50">©smileschool 2020</p>
     </div>
   </footer>
+ <style>
+  .navbar-toggler {
+    color: white;
+    border: none;
+  }
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
+</style>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+      var currentPath = window.location.pathname.split("/").pop();
+      var navLinks = document.querySelectorAll(".nav-link");
+
+      navLinks.forEach(function (link) {
+          if (link.getAttribute("href") === currentPath) {
+              link.classList.add("active");
+          }
+      });
+  });
+</script>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
