--- a/pricing.html
+++ b/pricing.html
@@ -19,21 +19,24 @@
     <header class="pricing pt-3 pb-1">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <a class="navbar-brand mx-auto d-flex flex-column align-items-center" href="#">
-                    <div class="container">
-                    <img src="images/smilelight.png" height="30px" alt="" class="mr-4">
-                    <img src="images/smileschooltext.png" height="15px" alt="">
+                    <div class="d-lg-none d-flex flex-column align-items-center">
+                        <img src="images/smilelight.png" height="30px" alt="">
+                        <img src="images/smileschooltext.png" height="15px" alt="">
+                    </div>
+                    <div class="d-none d-lg-flex align-items-center">
+                        <img src="images/smilelight.png" height="30px" alt="" class="mr-4">
+                        <img src="images/smileschooltext.png" height="15px" alt="">
                     </div>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">o</span>
-                </button>
-                
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto text-uppercase">
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Courses</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Login</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="courses.html">Courses</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="pricing.html">Pricing</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -177,5 +180,26 @@
           <p class="copyright text-center my-3 text-white-50">©smileschool 2020</p>
         </div>
       </footer>
+      <style>
+        .navbar-toggler {
+          color: white;
+          border: none;
+        }
+        .navbar-toggler-icon {
+          background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+        }
+      </style>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var currentPath = window.location.pathname.split("/").pop();
+            var navLinks = document.querySelectorAll(".nav-link");
+    
+            navLinks.forEach(function (link) {
+                if (link.getAttribute("href") === currentPath) {
+                    link.classList.add("active");
+                }
+            });
+        });
+    </script>
 </body>
 </html>
